@startuml diagram

interface ExerciseFactory{
    + createGeneralExercise() : Exercise
    + createSportExercise() : Exercise
}

class OutdoorExerciseFactory{
    + createGeneralExercise() : Exercise
    + createSportExercise() : Exercise
}


class IndoorExerciseFactory{
    + createGeneralExercise() : Exercise
    + createSportExercise() : Exercise
}

interface Exercise{
    + getExerciseDataSummary() : String
    + getExerciseTutorialUrl() : String
}

class OutdoorGeneralExercise{
    - name : String
    - difficulty : ExerciseDifficulty
    - description : String
    - duration : int
    - preferredTerrain : String
    - tutorialUrl : String
}

class OutdoorSportExercise{
    - name : String
    - sport : Sport
    - difficulty : ExerciseDifficulty
    - description : String
    - duration : int
    - preferredTerrain : String
    - tutorialUrl : String
}

class IndoorGeneralExercise{
    - name : String
    - difficulty : ExerciseDifficulty
    - description : String
    - duration : int
    - tutorialUrl : String
}

class IndoorSportExercise{
    - name : String
    - sport : Sport
    - difficulty : ExerciseDifficulty
    - description : String
    - duration : int
    - tutorialUrl : String
}

enum ExerciseDifficulty{
    BEGINNER
    INTERMEDIATE
    ADVANCED
    PROFESSIONAL
}

enum Sport{
    FOOTBALL
    BASKETBALL
    RUNNING
    VOLLEYBALL

}


OutdoorExerciseFactory ..u|> ExerciseFactory
IndoorExerciseFactory ..u|> ExerciseFactory

OutdoorExerciseFactory --> OutdoorGeneralExercise
OutdoorExerciseFactory --> OutdoorSportExercise

IndoorExerciseFactory --> IndoorGeneralExercise
IndoorExerciseFactory --> IndoorSportExercise

OutdoorGeneralExercise ..u|> Exercise
OutdoorGeneralExercise --> ExerciseDifficulty
OutdoorSportExercise ..u|> Exercise
OutdoorSportExercise --> ExerciseDifficulty
OutdoorSportExercise --> Sport


IndoorGeneralExercise ..u|> Exercise
IndoorGeneralExercise --> ExerciseDifficulty
IndoorSportExercise ..u|> Exercise
IndoorSportExercise --> ExerciseDifficulty
IndoorSportExercise --> Sport

